Update issue templates

--- a/.github/ISSUE_TEMPLATE/💻개발-💊수정-👼리팩토링.md
+++ b/.github/ISSUE_TEMPLATE/💻개발-💊수정-👼리팩토링.md
@@ -2,9 +2,18 @@
 name: "\U0001F4BB개발 \U0001F48A수정 \U0001F47C리팩토링"
 about: 작업 사항을 입력 해 주세요
 title: ''
-labels: ":angel: 리팩토링, :computer: 개발, :pill: 수정"
+labels: ''
 assignees: wonsy1006, do88y, 5hk5, yeeunchoii
 
 ---
 
-**모두가 알아볼 수 있도록 설명을 작성해주세요**
+### ✔체크 리스트 (PR 올리기 전 아래 내용을 확인해 주세요)
+- merge 할 브랜치의 위치를 확인해 주세요 (master/main❌)
+- 적절한 라벨과 Assignees를 지정해 주세요
+- 리뷰가 필요한 경우 '리뷰' 라벨을 달아주고, 리뷰어를 지정해 주세요
+- 승인된 PR은 리뷰어가 머지를 하고, 수정 요청이 온 경우 수정 후 다시 push 를 합니다.
+
+### ✍PR 내용
+
+
+### 🎸기타 링크 및 참고사항
