--- a/.github/ISSUE_TEMPLATE/🐞버그.md
+++ b/.github/ISSUE_TEMPLATE/🐞버그.md
@@ -7,6 +7,13 @@ assignees: wonsy1006, do88y, 5hk5, yeeunchoii
 
 ---
 
+### ✔체크 리스트 (올리기 전 아래 내용을 확인해 주세요)
+- 적절한 라벨과 Assignees를 지정해 주세요
+- 해결 된 버그는 작성자가 완료처리를 해주세요
+
+
+### ✍이슈 내용
+
 **어떤 버그인지**
 발생한 버그에 관한 설명을 적어주세요.
 
@@ -34,5 +41,7 @@ assignees: wonsy1006, do88y, 5hk5, yeeunchoii
  - Browser [e.g. stock browser, safari]
  - Version [e.g. 22]
 
-**추가 사항**
+
+### 🎸기타 링크 및 참고사항
+
 발생한 문제에 관한 어떤 말이든 적어주세요.
